@@ -71,6 +71,30 @@ cmd_txhold(struct lldpctl_conn_t *conn, struct writer *w,
 }
 
 static int
+cmd_maxneighs(struct lldpctl_conn_t *conn, struct writer *w,
+    struct cmd_env *env, void *arg)
+{
+	log_debug("lldpctl", "set maximum neighbors");
+
+	lldpctl_atom_t *config = lldpctl_get_configuration(conn);
+	if (config == NULL) {
+		log_warnx("lldpctl", "unable to get configuration from lldpd. %s",
+		    lldpctl_last_strerror(conn));
+		return 0;
+	}
+	if (lldpctl_atom_set_str(config,
+		lldpctl_k_config_max_neighbors, cmdenv_get(env, "max-neighbors")) == NULL) {
+		log_warnx("lldpctl", "unable to set maximum of neighbors. %s",
+		    lldpctl_last_strerror(conn));
+		lldpctl_atom_dec_ref(config);
+		return 0;
+	}
+	log_info("lldpctl", "maximum neighbors set to new value %s", cmdenv_get(env, "max-neighbors"));
+	lldpctl_atom_dec_ref(config);
+	return 1;
+}
+
+static int
 cmd_status(struct lldpctl_conn_t *conn, struct writer *w,
     struct cmd_env *env, void *arg)
 {
@@ -535,6 +559,16 @@ register_commands_configure_lldp(struct cmd_node *configure,
 			NULL, cmd_store_env_value, "tx-hold"),
 		NEWLINE, "Set LLDP transmit hold",
 		NULL, cmd_txhold, NULL);
+
+        commands_new(
+		commands_new(
+			commands_new(configure_lldp,
+			    "max-neighbors", "Set maximum number of neighbors per port",
+			    cmd_check_no_env, NULL, "ports"),
+			NULL, "Maximum number of neighbors",
+			NULL, cmd_store_env_value, "max-neighbors"),
+		NEWLINE, "Set maximum number of neighbors per port",
+		NULL, cmd_maxneighs, NULL);
 
 	struct cmd_node *status = commands_new(configure_lldp,
 	    "status", "Set administrative status",
