@@ -29,6 +29,7 @@ configure lldp portidsubtype local Batman
 configure lldp portidsubtype local Batman description Batman
 configure lldp tx-interval 30
 configure lldp tx-hold 4
+configure lldp max-neighbors 16
 configure lldp ports eth0 status tx-only
 configure lldp status rx-and-tx
 configure lldp custom-tlv oui 33,44,55 subtype 44
