@@ -1,3 +1,8 @@
+lldpd (1.0.4)
+  * Changes:
+    + Add "set system lldp max-neighbors XX" command to modify maximum
+      of neighbors accepted per port.
+
 lldpd (1.0.3)
   * Fix:
     + Fix creation of chroot directory.
